--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
       <version>${jersey.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-core-asl</artifactId>
       <version>${jackson.version}</version>
@@ -101,6 +106,18 @@
       <artifactId>guava</artifactId>
       <version>12.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.functionaljava</groupId>
+      <artifactId>functionaljava</artifactId>
+      <version>3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr-runtime</artifactId>
+      <version>3.5</version>
+      <scope>compile</scope>
+    </dependency>
+    
   </dependencies>
   <build>
     <pluginManagement>
@@ -134,6 +151,18 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+	<groupId>org.antlr</groupId>
+	<artifactId>antlr3-maven-plugin</artifactId>
+	<version>3.5</version>
+	<executions>
+	  <execution>
+	    <goals>
+	      <goal>antlr</goal>
+	    </goals>
+	  </execution>
+	</executions>
+      </plugin>
       <plugin>
 	<artifactId>maven-compiler-plugin</artifactId>
 	<configuration>
