--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,21 @@
       <version>3.5</version>
       <scope>compile</scope>
     </dependency>
-    
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>[1.6.6,)</version>
+    </dependency>    
   </dependencies>
   <build>
     <pluginManagement>
