--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>[1.6.6,)</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
